--- a/Assignment_1/Assignment_1.csproj
+++ b/Assignment_1/Assignment_1.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="NewtonSoft.Json" Version="12.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="System\Net\" />
+  </ItemGroup>
+
 </Project>
