--- a/Assignment_3_4_5_6/GameWebApi/GameWebApi.csproj
+++ b/Assignment_3_4_5_6/GameWebApi/GameWebApi.csproj
@@ -8,6 +8,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDb.Driver" Version="2.9.2" />
     <PackageReference Include="NewtonSoft.Json" Version="12.0.2" />
   </ItemGroup>
 
